--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
 </head>
 
 <body>
+    <div class="loading">
+        <div class="spinner" id="spinner">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+    </div>
     <header>
         <div class="logo">
             AC<span class="dout">.</span>
