--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <span></span>
             <span></span>
             <span></span>
-          </div>
+        </div>
     </div>
     <header>
         <div class="logo">
@@ -36,14 +36,17 @@
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#blog">Blog</a></li>
                     <li><a href="#contact">Contact</a></li>
-                     <li class="none"> | </li>
-                     <li class="none"><a href="#" style="margin-left: 5px;"><i class="fab fa-instagram"></i></a></li>
-                     <li class="none"><a href="#"><i class="fab fa-facebook"></i></a></li>
-                     <li class="none"><a href="#"><i class="fab fa-twitter"></i></a></li>
-                     <li class="none"><a href="#"><i class="fab fa-discord"></i></a></li>
+                    <li class="none"> | </li>
+                    <li class="none"><a href="https://www.instagram.com/adarshyou99/" target="_blank">
+                            style="margin-left: 5px;"><i class="fab fa-instagram"></i></a></li>
+                    <li class="none"><a href="https://www.facebook.com/profile.php?id=100089393133668"
+                            target="_blank"><i class="fab fa-facebook"></i></a></li>
+                    <li class="none"><a href="https://twitter.com/AdarshChau76104"><i class="fab fa-twitter"></i></a>
+                    </li>
+                    <li class="none"><a href="#" target="_blank"><i class="fab fa-discord"></i></a></li>
                 </ul>
             </nav>
-        </div>  
+        </div>
     </header>
     <section class="sec1">
         <div class="left">
@@ -55,8 +58,11 @@
                 </div>
                 <div class="line"></div>
                 <div class="social-media">
-                    <span>Instagram</span> | <span>Facebook</span> <br>
-                    <span>Twitter</span> | <span>Discord</span>
+                    <span><a href="https://www.instagram.com/adarshyou99/" target="_blank">Instagram</a></span> |
+                    <span><a href="https://www.facebook.com/profile.php?id=100089393133668"
+                            target="_blank">Facebook</a></span> <br>
+                    <span><a href="https://twitter.com/AdarshChau76104" target="_blank">Twitter</a></span> | <span><a
+                            href="878202703434645524" target="_blank">Discord</a></span>
                 </div>
                 <button class="btn">CONTACT ME</button>
             </div>
@@ -69,15 +75,15 @@
             <h4>INTRODUCTION</h4>
             <h2>UX/UI, FULL STACK WEB DEVELOPER</h2>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque illo sint, harum sapiente eaque ut
-                voluptatibus dignissimos error. Suscipit dolorum, explicabo eligendi cumque quibusdam quae.
+                I'm a web developer proficient in HTML, CSS, and JavaScript. I enjoy creating beautiful and functional
+                websites that make a difference. Let's connect and discuss your project ideas!
             </p>
             <div class="scrool">
                 <a href="#service">
                     Read more
-                <span class="material-symbols-outlined">
-                    arrow_downward
-                </span>
+                    <span class="material-symbols-outlined">
+                        arrow_downward
+                    </span>
                 </a>
             </div>
         </div>
@@ -87,9 +93,10 @@
             <h4>SERVICES</h4>
             <h1>What I Am Great At</h1>
             <p>
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupida non proident, sunt in culpa qui officia Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Aspernatur, temporibus!
+                I specialize in UI/UX design, web development, web research, and marketing. With expertise in these
+                areas, I bring creativity, functionality, and strategic insights to your projects. I bring a blend of
+                creativity, functionality, and strategic insights to every project, ensuring impactful results that
+                resonate with your audience and achieve your goals.
             </p>
             <div class="service">
                 <div class="box"><img src="pen-yellow.png" alt="">
@@ -134,9 +141,9 @@
             <h4>PORTFOLIO</h4>
             <h1>My Masterpiece Collection</h1>
             <p>
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupida non proident, sunt in culpa qui officia Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Aspernatur, temporibus!
+                Every project in my portfolio reflects my dedication to crafting engaging digital experiences. From
+                user-friendly designs to powerful web solutions, I aim to surpass expectations and make a lasting
+                impact.
             </p>
             <div class="sec3nav">
                 <ul>
@@ -175,7 +182,7 @@
                         <span class="material-symbols-outlined">
                             chevron_right
                         </span></span>
-                        <i class="fa-solid fa-bars menu"></i>
+                    <i class="fa-solid fa-bars menu"></i>
                 </div>
                 <div class="plong">
                     <img src="le.png" alt="">
