--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <li><a href="#contact">Contact</a></li>
                     <li class="none"> | </li>
                     <li class="none"><a href="https://www.instagram.com/adarshyou99/" target="_blank">
-                            style="margin-left: 5px;"><i class="fab fa-instagram"></i></a></li>
+                    <i class="fab fa-instagram"></i></a></li>
                     <li class="none"><a href="https://www.facebook.com/profile.php?id=100089393133668"
                             target="_blank"><i class="fab fa-facebook"></i></a></li>
                     <li class="none"><a href="https://twitter.com/AdarshChau76104"><i class="fab fa-twitter"></i></a>
